--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html manifest="cache.manifest">
 <head>
-<title>6.72 Exploit Menu By Leeful</title>
+<title>6.72 Exploit Menu By Leeful (reyo2k8)</title>
 <script>
 function DLProgress(e){Percent=(Math.round(e.loaded / e.total * 100));window.msgs.innerHTML="Installing Offline Cache: " + Percent + "%";}
 function DisplayCacheProgress(){setTimeout(function(){window.msgs.innerHTML="Cache Installed Successfully";},1000);setTimeout(function(){window.msgs.innerHTML="6.72 Exploit Host Menu";},3000);}window.applicationCache.addEventListener("progress",DLProgress,false);window.applicationCache.oncached=function(e){DisplayCacheProgress();};window.applicationCache.onupdateready=function(e){DisplayCacheProgress();};
@@ -29,8 +29,6 @@ function DisplayCacheProgress(){setTimeout(function(){window.msgs.innerHTML="Cac
 <div style="text-align:center">
 <button onclick="load_exploit(); return false"> Load Exploit </button> &nbsp;
 <button onclick="load_mira(); return false"> Load Mira </button>
-<br><br>
-<button onclick="load_exploit_mira(); return false"> Load Exploit + Mira Together </button>
 <br><br>
 <h1 style='font-size:15px;text-align:center;'>
 <img alt="" height="176" src="1.png" width="145" class="auto-style1" onclick="load_exploit_mira(); return false"></h1>
