--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ function DisplayCacheProgress(){setTimeout(function(){window.msgs.innerHTML="Cac
 <p style='text-align:center;' class="auto-style5">&nbsp;</p>
 <div style="text-align:center">
 	<h1 style='text-align:center;' class="auto-style3">
-	<a href="#">
+	<a href="https://reyo2k8.github.io/#">
 	<img class="auto-style1" height="277" onclick="load_exploit_mira(); return false" src="hen.png" width="231"></a></h1>
 </div>
 <div style="text-align:center">
@@ -47,17 +47,17 @@ function DisplayCacheProgress(){setTimeout(function(){window.msgs.innerHTML="Cac
 <div style="text-align:center">
 	<h1 style='text-align:center;' class="auto-style5">
 	Payloads</h1>
-	<br><a href="#">
+	<br><a href="https://reyo2k8.github.io/#">
 	<img class="auto-style1" height="131" onclick="load_binloader(); return false" src="bin.png" width="131"></a>
-	<a href="#">
+	<a href="https://reyo2k8.github.io/#">
 	<img class="auto-style1" height="131" onclick="load_ftp(); return false" src="ftp.png" width="131"></a>
-	<a href="#">
+	<a href="https://reyo2k8.github.io/#">
 	<img class="auto-style1" height="131" onclick="load_dumper(); return false" src="dumpp.png" width="130"></a>
-	<a href="#">
+	<a href="https://reyo2k8.github.io/#">
 	<img class="auto-style1" height="131" onclick="load_app2usb(); return false" src="usb.png" width="131"></a>
-	<a href="#">
+	<a href="https://reyo2k8.github.io/#">
 	<img class="auto-style1" height="131" onclick="load_updatesdisable(); return false" src="disable.png" width="131"></a>
-	<a href="#">
+	<a href="https://reyo2k8.github.io/#">
 	<img class="auto-style1" height="131" onclick="load_updatesenable(); return false" src="enable.png" width="131"></a><br>
 </div>
 <script>
