--- a/PS4672/index.html
+++ b/PS4672/index.html
@@ -3,7 +3,7 @@
 <title>PS4 6.72 Exploit Menu Reyo2k8 (Leeful v4)</title>
 <script>
 function DLProgress(e){Percent=(Math.round(e.loaded / e.total * 100));window.msgs.innerHTML="Installing Offline Cache: " + Percent + "%";}
-function DisplayCacheProgress(){setTimeout(function(){window.msgs.innerHTML="Cache Installed Successfully";},1000);setTimeout(function(){window.msgs.innerHTML="6.72 Exploit Host Menu";},3000);}window.applicationCache.addEventListener("progress",DLProgress,false);window.applicationCache.oncached=function(e){DisplayCacheProgress();};window.applicationCache.onupdateready=function(e){DisplayCacheProgress();};
+function DisplayCacheProgress(){setTimeout(function(){window.msgs.innerHTML="Cache Installed Successfully";},1000);setTimeout(function(){window.msgs.innerHTML="PS4 6.72 Exploit Menu";},3000);}window.applicationCache.addEventListener("progress",DLProgress,false);window.applicationCache.oncached=function(e){DisplayCacheProgress();};window.applicationCache.onupdateready=function(e){DisplayCacheProgress();};
 </script>
 <script src="exp_common.js"></script>
 <script src="exp_jailbreak.js"></script>
@@ -46,16 +46,48 @@ function DisplayCacheProgress(){setTimeout(function(){window.msgs.innerHTML="Cac
 .auto-style9 {
 	font-size: 16px;
 }
+.auto-style12 {
+	font-size: 16px;
+	font-family: Verdana;
+	color: #FFFFFF;
+}
+.auto-style14 {
+	font-family: Verdana;
+}
+.auto-style15 {
+	border-width: 0px;
+	font-family: Verdana;
+	vertical-align: middle;
+	font-size: 16px;
+}
+.auto-style16 {
+	color: #FFFFFF;
+}
+.auto-style17 {
+	text-align: center;
+}
+.auto-style18 {
+	font-family: Verdana;
+	font-size: 16px;
+}
+.auto-style19 {
+	font-size: 12px;
+}
+.auto-style20 {
+	color: #AECDFF;
+}
 </style>
 </head>
 <body style="background-color: #00359B">
 <h1 id=msgs style='font-size:25px;text-align:center;' class="auto-style2">&nbsp;<img height="25" src="ps4tr.png" width="106"> 6.72 Exploit Menu</h1>
 <hr>
 <h1 class="auto-style7">
-<img height="25" src="xbutton.png" width="25" class="auto-style9"><span class="auto-style9"> Select&nbsp;&nbsp;
-<img height="25" src="psbutton.png" width="25"> Exit</span></h1>
+<img height="25" src="xbutton.png" width="25" class="auto-style12"><span class="auto-style9"><span class="auto-style2"> Select&nbsp;&nbsp;
+		</span>
+<img height="25" src="psbutton.png" width="25" class="auto-style2"><span class="auto-style2"> 
+Exit</span></span></h1>
 <h1 style='text-align:center;' class="auto-style8">Load Jailbreak</h1>
-<p style='text-align:center;' class="auto-style5">&nbsp;</p>
+<p style='text-align:center;' class="auto-style8">&nbsp;</p>
 <div style="text-align:center">
 	<h1 style='text-align:center;' class="auto-style3">
 	<a href="https://reyo2k8.github.io/#">
@@ -66,6 +98,7 @@ onmouseout="this.src='hen.png';"></a></h1>
 	<h1 style='text-align:center;' class="auto-style5">
 	&nbsp;</h1>
 </div>
+
 <div style="text-align:center">
 	<h1 style='text-align:center;' class="auto-style8">
 	Payloads</h1>
@@ -175,6 +208,38 @@ LoadedMSG="Enable Updates Loaded";
 var script = document.createElement('script');script.src = "pl_updatesEnable.js";document.getElementsByTagName('head')[0].appendChild(script);
 var script = document.createElement('script');script.src = "exp_loader.js";document.getElementsByTagName('head')[0].appendChild(script);
 }
+
+function load_fanthresh(){
+msgs.innerHTML="<h1 style='font-size:25px;text-align:center;'>Loading Fan Threshold ...</h1>";
+LoadedMSG="Fan Threshold Loaded";fanTemp=tempC.value;//alert(fanTemp);
+var script = document.createElement('script');script.src = "pl_fanthresh.js";document.getElementsByTagName('head')[0].appendChild(script);
+var script = document.createElement('script');script.src = "exp_loader.js";document.getElementsByTagName('head')[0].appendChild(script);
+}
 </script>
+<div class="auto-style17">
+	<span class="auto-style14"><span class="auto-style16"><br>
+	</span><span class="auto-style9"><span class="auto-style20">Fan Control</span><span class="auto-style16">
+	</span></span></span>
+	<select id="tempC" class="auto-style18" name="D1"></select><span class="auto-style14"><span class="auto-style16">
+<img class="auto-style15" onclick="load_fanthresh(); return false" src="fan2.png"><span class="auto-style9">
+	</span>
+	</span><span class="auto-style9"><span class="auto-style20">Set</span></span><span class="auto-style16"><br class="auto-style9">
+	<span class="auto-style19">Default 79&#176;C
+<script>
+for(var i=40; i<=79; i++){
+    var select = document.getElementById("tempC");
+    var option = document.createElement("OPTION");
+	select.options.add(option);
+	option.text = i;
+	option.value = i;
+}
+tempC.value=60;
+</script>
+	</span>
+	</span></span>
+
+</div>
+
+<p class="auto-style17">&nbsp;</p>
 </body>
 </html>
