--- a/PS4672/index.html
+++ b/PS4672/index.html
@@ -1,4 +1,4 @@
-﻿<html manifest="cache.manifest">
+<html manifest="cache.manifest">
 <head>
 <title>PS4 6.72 Exploit Menu Reyo2k8 (Leeful v5)</title>
 <script>
@@ -10,31 +10,39 @@ function DisplayCacheProgress(){setTimeout(function(){window.msgs.innerHTML="Cac
 <style type="text/css">
 .auto-style1 {
 	text-align: right;
+	font-size: 26px;
 }
 .auto-style2 {
 	text-align: right;
 	font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 .auto-style3 {
-	font-size: 18px;
+	font-size: 26px;
+	text-align: center;
+	font-weight: normal;
 }
 .auto-style5 {
 	border-width: 0px;
 	text-align: right;
 	vertical-align: top;
 }
+.auto-style7 {
+	font-size: 30px;
+	text-align: center;
+	font-weight: normal;
+}
 </style>
 </head>
-<body style="background-color:#00359B;color:white;">
+<body style="background-color:#00359B;color:white; background-image: url('background2.png');">
 <div class="auto-style2">
-<h1 id=msgs style='font-size:25px;text-align:center;'>
+<h1 id=msgs class="auto-style7">
 <img height="25" src="ps4tr.png" width="106"> 6.72 Exploit Menu</h1>
 <hr>
 	<div class="auto-style1">
-		<img height="25" src="xbutton.png" width="25">Select
+		<img height="25" src="xbutton.png" width="25">Select&nbsp;&nbsp;
 		<img height="25" src="psbutton.png" width="25">Exit<br>
 	</div>
-	<h1 style='font-size:18px;text-align:center;'>Load Jailbreak</h1>
+	<h1 class="auto-style3">Load Jailbreak</h1>
 <div style="text-align:center">
 	<a href="https://reyo2k8.github.io/PS4672/#">
 <img class="auto-style5" onclick="load_exploit_HEN(); return false" src="hen.png" onmouseover="this.src='henbig.png';"
@@ -117,6 +125,55 @@ var script = document.createElement('script');script.src = "pl_ftp.js";document.
 var script = document.createElement('script');script.src = "exp_loader.js";document.getElementsByTagName('head')[0].appendChild(script);
 }
 
+function load_dumper(){
+msgs.innerHTML="<h1 style='font-size:25px;text-align:center;'>Loading Dumper ...</h1>";
+LoadedMSG="Dumper Loaded √";
+var script = document.createElement('script');script.src = "pl_dumper.js";document.getElementsByTagName('head')[0].appendChild(script);
+var script = document.createElement('script');script.src = "exp_loader.js";document.getElementsByTagName('head')[0].appendChild(script);
+}
+
+function load_linux(){
+msgs.innerHTML="<h1 style='font-size:25px;text-align:center;'>Loading Linux ...</h1>";
+LoadedMSG="Linux Loaded √";
+var script = document.createElement('script');script.src = "pl_linux.js";document.getElementsByTagName('head')[0].appendChild(script);
+var script = document.createElement('script');script.src = "exp_loader.js";document.getElementsByTagName('head')[0].appendChild(script);
+}
+
+function load_app2usb(){
+msgs.innerHTML="<h1 style='font-size:25px;text-align:center;'>Loading AppToUSB ...</h1>";
+LoadedMSG="AppToUSB Loaded √";
+var script = document.createElement('script');script.src = "pl_app2usb.js";document.getElementsByTagName('head')[0].appendChild(script);
+var script = document.createElement('script');script.src = "exp_loader.js";document.getElementsByTagName('head')[0].appendChild(script);
+}
+
+function load_kerneldump(){
+msgs.innerHTML="<h1 style='font-size:25px;text-align:center;'>Loading Kernel Dumper ...</h1>";
+LoadedMSG="Kernel Dumper Loaded √";
+var script = document.createElement('script');script.src = "pl_kernelDumper.js";document.getElementsByTagName('head')[0].appendChild(script);
+var script = document.createElement('script');script.src = "exp_loader.js";document.getElementsByTagName('head')[0].appendChild(script);
+}
+
+function load_webrte(){
+msgs.innerHTML="<h1 style='font-size:25px;text-align:center;'>Loading WebRTE ...</h1>";
+LoadedMSG="WebRTE Loaded √";
+var script = document.createElement('script');script.src = "pl_WebRTE.js";document.getElementsByTagName('head')[0].appendChild(script);
+var script = document.createElement('script');script.src = "exp_loader.js";document.getElementsByTagName('head')[0].appendChild(script);
+}
+
+function load_todex(){
+msgs.innerHTML="<h1 style='font-size:25px;text-align:center;'>Loading ToDEX ...</h1>";
+LoadedMSG="ToDEX Loaded √";
+var script = document.createElement('script');script.src = "pl_ToDEX.js";document.getElementsByTagName('head')[0].appendChild(script);
+var script = document.createElement('script');script.src = "exp_loader.js";document.getElementsByTagName('head')[0].appendChild(script);
+}
+
+function load_historyblock(){
+msgs.innerHTML="<h1 style='font-size:25px;text-align:center;'>Loading History Blocker ...</h1>";
+LoadedMSG="History Blocker Loaded √";
+var script = document.createElement('script');script.src = "pl_historyBlocker.js";document.getElementsByTagName('head')[0].appendChild(script);
+var script = document.createElement('script');script.src = "exp_loader.js";document.getElementsByTagName('head')[0].appendChild(script);
+}
+
 function load_updatesdisable(){
 msgs.innerHTML="<h1 style='font-size:25px;text-align:center;'>Loading Disable Updates ...</h1>";
 LoadedMSG="Disable Updates Loaded √";
@@ -128,6 +185,27 @@ function load_updatesenable(){
 msgs.innerHTML="<h1 style='font-size:25px;text-align:center;'>Loading Enable Updates ...</h1>";
 LoadedMSG="Enable Updates Loaded √";
 var script = document.createElement('script');script.src = "pl_updatesEnable.js";document.getElementsByTagName('head')[0].appendChild(script);
+var script = document.createElement('script');script.src = "exp_loader.js";document.getElementsByTagName('head')[0].appendChild(script);
+}
+
+function load_dbBackup(){
+msgs.innerHTML="<h1 style='font-size:25px;text-align:center;'>Loading DB Backup ...</h1>";
+LoadedMSG="DB Backup Loaded √";
+var script = document.createElement('script');script.src = "pl_dbBackup.js";document.getElementsByTagName('head')[0].appendChild(script);
+var script = document.createElement('script');script.src = "exp_loader.js";document.getElementsByTagName('head')[0].appendChild(script);
+}
+
+function load_dbRestore(){
+msgs.innerHTML="<h1 style='font-size:25px;text-align:center;'>Loading DB Restore ...</h1>";
+LoadedMSG="DB Restore Loaded √";
+var script = document.createElement('script');script.src = "pl_dbRestore.js";document.getElementsByTagName('head')[0].appendChild(script);
+var script = document.createElement('script');script.src = "exp_loader.js";document.getElementsByTagName('head')[0].appendChild(script);
+}
+
+function load_fanthresh(){
+msgs.innerHTML="<h1 style='font-size:25px;text-align:center;'>Loading Fan Threshold ...</h1>";
+LoadedMSG="Fan Threshold Loaded √";fanTemp=tempC.value;//alert(fanTemp);
+var script = document.createElement('script');script.src = "pl_fanthresh.js";document.getElementsByTagName('head')[0].appendChild(script);
 var script = document.createElement('script');script.src = "exp_loader.js";document.getElementsByTagName('head')[0].appendChild(script);
 }
 </script>
